@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
 	id="plugin.video.videovideo.dk"
-	version="1.0.2"
+	version="1.1.0"
 	name="videovideo.dk HD"
 	provider-name="twinther [tommy@winther.nu]">
 	<requires>
 		<import addon="xbmc.python" version="1.0"/>
 		<import addon="script.module.danishaddons" version="1.1.0"/>
-		<import addon="script.module.feedparser" version="4.1"/>
+		<import addon="script.module.simplejson" version="2.0.10"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="addon.py">
 		<provides>video</provides>
