@@ -1,3 +1,6 @@
+[B]Version 1.1.0[/B]
+- Rewrote to use json feeds from videovideo.dk
+
 [B]Version 1.0.2[/B]
 - Use danishaddons module version 1.1.0
 
